--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,20 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-div.tooltip {
+body {
+  background: url(../trump.jpg) no-repeat center;
+  background-size: cover;
+}
+
+.circle {
+  cursor: pointer;
+}
+
+.circle:hover {
+  stroke-width: 1px;
+}
+
+.tooltip {
   position: absolute;
   text-align: center;
   max-width: 160px;
@@ -15,10 +28,7 @@ div.tooltip {
   pointer-events: none;
   border-style: solid;
   border-radius: 8px;
-  
-  /* Lmao, we can change the color if we want but this is too funny */
-  /* https://www.color-hex.com/color-palette/78018 */
-  background:rgba(255, 170 , 95);
+  background: #ffaa5f;
   border-color: rgba(229, 124, 0, 0.9);
 }
 /*# sourceMappingURL=style.css.map */
