--- a/style/style.scss
+++ b/style/style.scss
@@ -2,3 +2,32 @@ html {
     font-size: 62.5%;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+    background: url(../trump.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.circle {
+    cursor: pointer;
+
+    &:hover {
+        stroke-width: 1px;
+    }
+}
+
+.tooltip {
+    position: absolute;
+    text-align: center;
+    max-width: 160px;
+    max-height: 200px;
+    margin: auto;
+    padding: 5px;
+    font: 80%;
+    color: black;
+    pointer-events: none;
+    border-style: solid;
+    border-radius: 8px;
+    background:rgb(255, 170 , 95);
+    border-color: rgba(229, 124, 0, 0.9);
+}
