--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,8 @@ body {
 
 .circle {
   cursor: pointer;
+  -webkit-transition: stroke-width .2s;
+  transition: stroke-width .2s;
 }
 
 .circle:hover {
@@ -19,8 +21,8 @@ body {
 .tooltip {
   position: absolute;
   text-align: center;
-  max-width: 160px;
-  max-height: 200px;
+  max-width: 16rem;
+  max-height: 20rem;
   margin: auto;
   padding: 5px;
   font: 80%;
@@ -30,5 +32,7 @@ body {
   border-radius: 8px;
   background: #ffaa5f;
   border-color: rgba(229, 124, 0, 0.9);
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
 }
 /*# sourceMappingURL=style.css.map */
