--- a/style/style.scss
+++ b/style/style.scss
@@ -10,6 +10,7 @@ body {
 
 .circle {
     cursor: pointer;
+    transition: stroke-width .2s;
 
     &:hover {
         stroke-width: 1px;
@@ -19,8 +20,8 @@ body {
 .tooltip {
     position: absolute;
     text-align: center;
-    max-width: 160px;
-    max-height: 200px;
+    max-width: 16rem;
+    max-height: 20rem;
     margin: auto;
     padding: 5px;
     font: 80%;
@@ -29,5 +30,6 @@ body {
     border-style: solid;
     border-radius: 8px;
     background:rgb(255, 170 , 95);
-    border-color: rgba(229, 124, 0, 0.9);
+    border-color: rgba(229, 124, 0, .9);
+    transition: opacity .2s;
 }
